diesel_compile_tests/tests/fail/update_requires_valid_where_clause.stderr
error[E0277]: the trait bound `SelectStatement<FromClause<table>, ..., ..., ...>: IntoUpdateTarget` is not satisfied
  --> tests/fail/update_requires_valid_where_clause.rs:23:12
   |
LL |     update(users::table.filter(posts::id.eq(1)));
   |     ------ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoUpdateTarget` is not implemented for `SelectStatement<FromClause<table>, DefaultSelectClause<...>, ..., ...>`
   |     |
   |     required by a bound introduced by this call
   |
   = note: only tables or select statements with only the filter clause applied are valid update targets
   = help: the trait `IntoUpdateTarget` is implemented for `SelectStatement<FromClause<F>, DefaultSelectClause<...>, ..., ...>`
note: required by a bound in `diesel::update`
  --> DIESEL/diesel/diesel/src/query_builder/functions.rs
   |
LL | pub fn update<T: IntoUpdateTarget>(source: T) -> UpdateStatement<T::Table, T::WhereClause> {
   |                  ^^^^^^^^^^^^^^^^ required by this bound in `update`

   help: consider removing this method call, as the receiver has type `users::table` and `users::table: IntoUpdateTarget` trivially holds
   |
23 -     update(users::table.filter(posts::id.eq(1)));
23 +     update(users::table);
   |

error[E0271]: type mismatch resolving `<table as AppearsInFromClause<table>>::Count == Once`
  --> tests/fail/update_requires_valid_where_clause.rs:27:26
   |
LL |     update(users::table).filter(posts::id.eq(1));
   |                          ^^^^^^ expected `Once`, found `Never`
   |
note: required for `posts::columns::id` to implement `AppearsOnTable<users::table>`
  --> tests/fail/update_requires_valid_where_clause.rs:13:9
   |
LL |         id -> Integer,
   |         ^^
   = note: associated types for the current `impl` cannot be restricted in `where` clauses
   = note: 2 redundant requirements hidden
   = note: required for `Grouped<Eq<id, Bound<Integer, i32>>>` to implement `AppearsOnTable<users::table>`
   = note: required for `UpdateStatement<users::table, diesel::query_builder::where_clause::NoWhereClause>` to implement `FilterDsl<Grouped<Eq<id, Bound<Integer, i32>>>>`

      = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<table as AppearsInFromClause<table>>::Count == Once`
  --> tests/fail/update_requires_valid_where_clause.rs:32:10
   |
LL |         .filter(posts::id.eq(1));
   |          ^^^^^^ expected `Once`, found `Never`
   |
note: required for `posts::columns::id` to implement `AppearsOnTable<users::table>`
  --> tests/fail/update_requires_valid_where_clause.rs:13:9
   |
LL |         id -> Integer,
   |         ^^
   = note: associated types for the current `impl` cannot be restricted in `where` clauses
   = note: 2 redundant requirements hidden
   = note: required for `Grouped<Eq<id, Bound<Integer, i32>>>` to implement `AppearsOnTable<users::table>`
   = note: required for `UpdateStatement<table, NoWhereClause, Assign<..., ...>>` to implement `FilterDsl<Grouped<Eq<id, Bound<Integer, i32>>>>`

      = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `SelectStatement<FromClause<table>, ..., ..., ...>: IntoUpdateTarget` is not satisfied
  --> tests/fail/update_requires_valid_where_clause.rs:23:5
   |
LL |     update(users::table.filter(posts::id.eq(1)));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoUpdateTarget` is not implemented for `SelectStatement<FromClause<table>, DefaultSelectClause<...>, ..., ...>`
   |
   = note: only tables or select statements with only the filter clause applied are valid update targets
   = help: the trait `IntoUpdateTarget` is implemented for `SelectStatement<FromClause<F>, DefaultSelectClause<...>, ..., ...>`
